--- a/stable/wordpress/templates/ingress.yaml
+++ b/stable/wordpress/templates/ingress.yaml
@@ -12,6 +12,7 @@ metadata:
   annotations:
     {{- if .tls }}
     ingress.kubernetes.io/secure-backends: "true"
+    nginx.ingress.kubernetes.io/backend-protocol:  "HTTPS"
     {{- end }}
     {{- if .certManager }}
     kubernetes.io/tls-acme: "true"
@@ -27,7 +28,11 @@ spec:
         - path: {{ default "/" .path }}
           backend:
             serviceName: {{ template "fullname" $ }}
-            servicePort: 80
+            {{- if .tls }}
+            servicePort: https
+            {{- else }}
+            servicePort: http
+            {{- end }}
 {{- if .tls }}
   tls:
   - hosts:
